--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@quasar/cli": "^1.3.2",
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
-    "quasar": "^2.6.0",
+    "quasar": "^2.10.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
